# structclasses

./: .flake8  .gitignore  .preamble.yaml  BUILD  README.md  pants.toml  pyproject.toml
src/structclasses/: __init__.py  base.py  base_test.py  decorator.py  decorator_test.py  field_test.py
src/structclasses/field/: array_test.py  data.py  data_test.py  enum.py  meta.py  primitive.py  primitive_test.py  record.py  union.py  union_test.py
